[gd_scene load_steps=6 format=2]

[ext_resource path="res://Image/Background2.png" type="Texture" id=1]
[ext_resource path="res://Script/scene_game.gd" type="Script" id=2]
[ext_resource path="res://Image/MachineOn.png" type="Texture" id=3]
[ext_resource path="res://Image/Elemental.png" type="Texture" id=4]
[ext_resource path="res://Image/MachineOff.png" type="Texture" id=5]

[node name="game" type="Node2D"]
script = ExtResource( 2 )

[node name="Background2" type="Sprite" parent="."]
position = Vector2( 400, 300 )
texture = ExtResource( 1 )

[node name="PlayerElemental" type="Node2D" parent="."]

[node name="Elemental" type="Sprite" parent="PlayerElemental"]
texture = ExtResource( 4 )
centered = false

[node name="PlayerMachine" type="Node2D" parent="."]

[node name="MachineOff" type="Sprite" parent="PlayerMachine"]
texture = ExtResource( 5 )
centered = false

[node name="MachineOn" type="Sprite" parent="PlayerMachine"]
texture = ExtResource( 3 )
centered = false
